# vdbmat

./: .aiexclude  README.md  README_EXTEND.md  REDME_DEV.md  pyproject.toml
docs/: export-workflow.md  material-identity-contract.md  phase0-feasibility-report.md  phase1-export-workflow.md  phase1-research-mvp-report.md  reference-baselines.md
docs/adr/: 0002-canonical-volume-schemas.md  0003-boundaries-and-refractive-index.md  0004-zarr-layout-and-compatibility.md  0005-exporter-boundary.md  0006-phase1-inputs-and-voxelization.md  0007-pipeline-run-and-artifact-bundle.md  0008-cli-contract-and-failure-semantics.md  0009-input-generator-contract-and-external-mappings.md
docs/conformance/: cross-consumer-check.md
docs/gui/: stage_viewer_manual.md
docs/mitsuba/: integration.md
docs/openvdb/: cycles-integration.md  phase0-cycles-proof.md
docs/optics/: reference-mapping-v1.md
docs/schemas/: optical-mapping-v1.md  volume-schema-v1.md
docs/zarr/: phase0-fixture-report.md
examples/native_fixtures/: check_cross_consumer_conformance.py  export_openvdb_fixtures.py  inspect_ior_interfaces.py  map_synthetic_fixtures.py  probe_mitsuba_ior.py  render_blender_fixtures.py  zarr_fixture_report.py
tests/: test_mitsuba_session_compat.py  test_mitsuba_stage_config.py  test_mitsuba_stage_core_denoise.py  test_mitsuba_stage_demo.py  test_mitsuba_stage_inputs.py  test_mitsuba_stage_mappings.py  test_mitsuba_stage_presets.py  test_mitsuba_stage_regen.py  test_mitsuba_stage_viewer_worker.py  test_mitsuba_viewer_session.py  test_package.py
tools/: Dockerfile.openvdb-cycles
(+145 files in other folders)
